objects/OUV_Booking__c.object
<CustomObject>
    <label>OUV Booking</label>
    <nameField>
        <displayFormat>Booking-{00000000}</displayFormat>
        <label>OUV Booking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OUV Bookings</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>OUV_VLA__c</fullName>
        <formula>IF( OUV_VehicleLoanAgreement__c = true, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driver_1__c</fullName>
        <inlineHelpText>Add driver detail here, cdsid for JLR Employee, or logistics company moving the vehicle - Do not add any external user personal details; name, phone number, address etc. and ensure the data you add complies with CP1-011 and your local Privacy Policies.</inlineHelpText>
        <label>Driver 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driver_2__c</fullName>
        <inlineHelpText>Add driver detail here, cdsid for JLR Employee, or logistics company moving the vehicle - Do not add any external user personal details; name, phone number, address etc. and ensure the data you add complies with CP1-011 and your local Privacy Policies.</inlineHelpText>
        <label>Driver 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_VIN__c</fullName>
        <label>Full VIN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_Fleet__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Fleet</label>
        <referenceTo>OUV_Fleet__c</referenceTo>
        <relationshipLabel>OUV Bookings</relationshipLabel>
        <relationshipName>OUV_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLA_Status__c</fullName>
        <label>VLA Status</label>
        <length>175</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_DoANote__c</fullName>
        <label>DoA Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LL4_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Weekend Pass Approver (LL4)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Bookings_LL4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LL5_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overnight Pass Approver (LL5)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Bookings_LL5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LL6_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Day Pass Approver (LL6)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Bookings_LL6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Comments__c</fullName>
        <inlineHelpText>A Detail Description of the Use of the Vehicle(s) - Do not add any personal details; name, phone number, address etc. and ensure the data you add complies with CP1-011 and your local Privacy Policies.</inlineHelpText>
        <label>Reason for Booking</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OUV_DoANote1__c</fullName>
        <formula>IF( (ISPICKVAL( OUV_PassoutType__c , &apos;Weekend&apos;) || ISPICKVAL(OUV_PassoutType__c, &apos;Overnight&apos;)) ,
&apos;Overnight Passout - Requires LL5 or above Approval Weekend Passout - Requires LL4 or above Approval Overnight / Weekend Passout - Can be Approved by FD / MD in Market. Delegation of Authorities.&apos;,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DoA Note</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <formula>TEXT(OUV_Destination_Location__r.OUV_LocationType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_CostCenter__c</fullName>
        <label>Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_DriverUser__c</fullName>
        <inlineHelpText>The JLR CDSID of the person requesting, using or who is responsible for the vehicle whilst on loan.</inlineHelpText>
        <label>Internal JLR Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_HandInDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Hand-In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_MileageEnd__c</fullName>
        <label>Mileage End</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_BookingType__c</fullName>
        <label>Booking Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passout</fullName>
                    <label>Reservation (Passout)</label>
                </value>
                <value>
                    <fullName>Repair Booking</fullName>
                    <label>Repair</label>
                </value>
                <value>
                    <fullName>Other Remarketing event  Booking</fullName>
                    <label>Used Vehicle Sale/Remarketing</label>
                </value>
                <value>
                    <fullName>Workshop Booking</fullName>
                    <label>JLR Internal Workshop inc. Passout</label>
                </value>
                <value>
                    <fullName>Preparation/Reallocation</fullName>
                    <label>Preparation/Relocation</label>
                </value>
                <value>
                    <fullName>Auction Booking</fullName>
                    <isActive>false</isActive>
                    <label>Auction Booking</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_IsCancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if booking cancelled when Related vehicle status = write-off .</description>
        <label>Is Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_JourneyType__c</fullName>
        <label>Journey Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One way</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_PassoutType__c</fullName>
        <label>Passout Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OUV_BookingType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Weekend</fullName>
                </value>
                <value>
                    <fullName>Overnight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Todays_Date__c</fullName>
        <formula>Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Todays Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Car_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keys Checked Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_FleetManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fleet Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_KeysReceived__c</fullName>
        <label>no. of Keys Handed over</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                    <isActive>false</isActive>
                    <label>0</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_KeysReturned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keys Checked In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_LoanCategory__c</fullName>
        <label>VLA Template</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OUV_Loan_Agreement_Market__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>VLA - Individual (Internal User)</fullName>
                    <label>Individual (Internal User)</label>
                </value>
                <value>
                    <fullName>VLA - Individual (External User)</fullName>
                    <label>Individual (External User)</label>
                </value>
                <value>
                    <fullName>Individual - Jaguar</fullName>
                </value>
                <value>
                    <fullName>Individual - Land Rover</fullName>
                </value>
                <value>
                    <fullName>Individual (less than 30 days)</fullName>
                </value>
                <value>
                    <fullName>Individual (more than 30 days)</fullName>
                </value>
                <value>
                    <fullName>Company (less than 30 days)</fullName>
                </value>
                <value>
                    <fullName>Company (more than 30 days)</fullName>
                </value>
                <value>
                    <fullName>MENA - Range Rover Velar</fullName>
                </value>
                <value>
                    <fullName>MENA - Discovery</fullName>
                </value>
                <value>
                    <fullName>MENA - Range Rover</fullName>
                </value>
                <value>
                    <fullName>MENA - F-Pace</fullName>
                </value>
                <value>
                    <fullName>MENA - F-Type</fullName>
                </value>
                <value>
                    <fullName>MENA - E-Pace</fullName>
                </value>
                <value>
                    <fullName>MENA - Defender</fullName>
                </value>
                <value>
                    <fullName>Individual (German)</fullName>
                </value>
                <value>
                    <fullName>Individual (Czech)</fullName>
                </value>
                <value>
                    <fullName>Individual (English)</fullName>
                </value>
                <value>
                    <fullName>Individual (Spanish)</fullName>
                </value>
                <value>
                    <fullName>Individual (Portuguese)</fullName>
                </value>
                <value>
                    <fullName>Individual - Jaguar (with cost)</fullName>
                </value>
                <value>
                    <fullName>Individual - Jaguar (w/o cost)</fullName>
                </value>
                <value>
                    <fullName>Individual - Land Rover (with cost)</fullName>
                </value>
                <value>
                    <fullName>Individual - Land Rover (w/o cost)</fullName>
                </value>
                <value>
                    <fullName>Authorization letter - California</fullName>
                </value>
                <value>
                    <fullName>VIP Lease</fullName>
                </value>
                <value>
                    <fullName>Press - JLR Insures</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_ReturnedDate__c</fullName>
        <label>Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_FinancialYear__c</fullName>
        <label>Financial Year</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_LogisticEmail__c</fullName>
        <label>Logistic Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OUV_OtherLocation__c</fullName>
        <inlineHelpText>If Location is not available on the Lookup, then the user should add a value in the Other Location field. Must not contain GDPR information.</inlineHelpText>
        <label>Other Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_BookingEndDate__c</fullName>
        <label>Booking End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Level1Category__c</fullName>
        <label>Level 1 Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employee Cars</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Used</fullName>
                </value>
                <value>
                    <fullName>Buybacks</fullName>
                </value>
                <value>
                    <fullName>Expensed Vehicles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Level2Category__c</fullName>
        <label>Level 2 Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OUV_Level1Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Social Responsibility (CSR)</fullName>
                </value>
                <value>
                    <fullName>VIP Loans</fullName>
                </value>
                <value>
                    <fullName>Launch/Events</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>JLR Experience</fullName>
                </value>
                <value>
                    <fullName>Sponsership</fullName>
                </value>
                <value>
                    <fullName>Marketing Asset Production</fullName>
                </value>
                <value>
                    <fullName>Product Placement</fullName>
                </value>
                <value>
                    <fullName>Demonstrators</fullName>
                </value>
                <value>
                    <fullName>Homologation Cars</fullName>
                </value>
                <value>
                    <fullName>Customer Service -Diagnostics/Methods/Product Investigation/Training</fullName>
                </value>
                <value>
                    <fullName>Customer Service - Loan Vehicles</fullName>
                </value>
                <value>
                    <fullName>Product Development Vehicles</fullName>
                </value>
                <value>
                    <fullName>Manufacturing/Support Functions Vehicles</fullName>
                </value>
                <value>
                    <fullName>Pool Cars</fullName>
                </value>
                <value>
                    <fullName>All Other</fullName>
                </value>
                <value>
                    <fullName>Cars awaiting sale / rework / disposal</fullName>
                </value>
                <value>
                    <fullName>Fleet Buybacks awaiting rework/resale</fullName>
                </value>
                <value>
                    <fullName>Employee vehicle returns/MRC Buybacks awaiting rework/resale</fullName>
                </value>
                <value>
                    <fullName>Classic Donor vehicles</fullName>
                </value>
                <value>
                    <fullName>Customer Buybacks</fullName>
                </value>
                <value>
                    <fullName>Fleet Buybacks</fullName>
                </value>
                <value>
                    <fullName>Writtendown/Provisioned Units (£1 Vehicles)</fullName>
                </value>
                <value>
                    <fullName>Heritage/Museum Vehicles</fullName>
                </value>
                <value>
                    <fullName>Terms of Employment	Terms of Employment</fullName>
                </value>
                <value>
                    <fullName>Job Related</fullName>
                </value>
                <value>
                    <fullName>Press/PR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Level3Category__c</fullName>
        <label>Level 3 Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OUV_Level2Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Royal Household (RHH)</fullName>
                </value>
                <value>
                    <fullName>VIP - Corporate</fullName>
                </value>
                <value>
                    <fullName>VIP - Individual (Charged)</fullName>
                </value>
                <value>
                    <fullName>VIP - Individual (Free of Charge)</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_ReworkSentDate__c</fullName>
        <label>Re-work Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_VehicleMileage__c</fullName>
        <label>Vehicle Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Return_Description__c</fullName>
        <formula>&quot;Keys Checked in on&quot; + &quot; &quot; + Text(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Keys Checked In Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_PrimaryLocation__c</fullName>
        <label>Primary Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Template_Market__c</fullName>
        <defaultValue>$User.Country</defaultValue>
        <label>Template Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OUV_Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_TrimDescription__c</fullName>
        <label>Trim Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <label>Registration Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_BookingStartDate__c</fullName>
        <label>Booking Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Booking_End_Time__c</fullName>
        <label>Booking End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OUV_ByPassValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is being changed then validation rules should not be evaluated</description>
        <label>OUV_ByPassValidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_PaintDescription__c</fullName>
        <label>Paint Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_VehicleCondition__c</fullName>
        <label>Vehicle Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VLA_Aux_Recall_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used in the Booking Approval Process to help with the VLA owner change when the booking is recalled.</description>
        <label>VLA Aux Recall Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Encrypted_Company_VLA__c</fullName>
        <label>Encrypted Company (VLA)</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Fleet_Administrator_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fleet Administrator 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Bookings_Admin2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fleet_Administrator_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fleet Administrator 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Bookings_Admin3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Delivery_Comments__c</fullName>
        <label>Delivery Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OUV_Delivery_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OUV Bookings (Delivery Location)</relationshipLabel>
        <relationshipName>OUV_Bookings_Delivery</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Document_Template__c</fullName>
        <label>Template</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OUV_Template_Market__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>OUV_Document_Template</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_IsVehicleWriteOff__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag will be set from flow to identify booking record is getting cancelled due to vehicle write off</description>
        <label>Is Vehicle Write Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_PaperworkReceived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paperwork Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_VLA_Record_Keeper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VLA Record Keeper</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Bookings_VLAKeeper</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Associated_Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Booking</label>
        <referenceTo>OUV_Booking__c</referenceTo>
        <relationshipLabel>OUV Bookings</relationshipLabel>
        <relationshipName>OUV_AssociatedBookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_BookingRequestType__c</fullName>
        <label>Booking Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Vehicle Booking</fullName>
                </value>
                <value>
                    <fullName>Multiple Vehicle booking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Booking_Start_Time__c</fullName>
        <label>Booking Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OUV_Delivery_Date_Time__c</fullName>
        <label>Delivery Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Driver_1__c</fullName>
        <label>Encrypted Driver 1</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Encrypted_Driver_2__c</fullName>
        <label>Encrypted Driver 2</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_FleetAdministrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fleet Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Bookings3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_ManualCancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field from layout</description>
        <label>Manual Cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_Min_Approval_Level__c</fullName>
        <description>Establish based on Type and VLA what is the minimum level of approval required.</description>
        <formula>IF(
  AND(
    ISPICKVAL( OUV_BookingType__c, &apos;Passout&apos;),
    ISPICKVAL( OUV_PassoutType__c , &apos;Weekend&apos;)
  ),
  &apos;LL4&apos;,
  IF(
     OR(
       AND(
         ISPICKVAL( OUV_BookingType__c, &apos;Passout&apos;),
         ISPICKVAL( OUV_PassoutType__c , &apos;Overnight&apos;)
       ),
       AND(
         OUV_VehicleLoanAgreement__c = true,
         OR(
           ISPICKVAL(OUV_BookingType__c, &apos;Workshop Booking&apos;),
           AND(
             ISPICKVAL( OUV_BookingType__c, &apos;Passout&apos;),
             ISPICKVAL( OUV_PassoutType__c , &apos;Day&apos;)
           )
         )
       )
     ),
     &apos;LL5&apos;,
     &apos;LL6&apos; 
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Min Approval Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLA_Aux_Approval_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VLA Aux Approval Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Encrypted_Full_Name_VLA__c</fullName>
        <label>Encrypted Full Name (VLA)</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OUV_Collection_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collection Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OUV Bookings (Collection Location)</relationshipLabel>
        <relationshipName>OUV_Bookings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OOUV_Product_Description__c</fullName>
        <label>Product Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_BookingJustification__c</fullName>
        <label>Booking Justification</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OUV_BookingType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Event/Sales activity</fullName>
                </value>
                <value>
                    <fullName>External Loan (VLA)</fullName>
                </value>
                <value>
                    <fullName>Pool Car</fullName>
                </value>
                <value>
                    <fullName>Appraisal</fullName>
                </value>
                <value>
                    <fullName>Eng. Roadtest (inc. Durability/Calibration)</fullName>
                </value>
                <value>
                    <fullName>Engineering Test/Investigation</fullName>
                </value>
                <value>
                    <fullName>Press Prep.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Collection_Date_Time__c</fullName>
        <label>Collection Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OUV_Destination_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OUV Bookings</relationshipLabel>
        <relationshipName>OUV_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_ModelYearDescription__c</fullName>
        <label>Model Year Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_RequestingDepartment__c</fullName>
        <label>Requesting Department</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OUV_VehicleLoanAgreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Generate VLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_ApprovalProcessActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is being changed then validation rules should not be evaluated.</description>
        <label>OUV_ApprovalProcessActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_BookingApprovalStatus__c</fullName>
        <label>Booking Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Booked Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Generate_Auction_Sdoc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Auction Sdoc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_Keys_Handed_over_Date__c</fullName>
        <label>Keys Checked Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Loan_Agreement_Market__c</fullName>
        <defaultValue>$User.Country</defaultValue>
        <label>VLA Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OUV_Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_MarketFinanceDirector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>(Deprecated) Market Finance Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Bookings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_Of_Vehicles_Reservation__c</fullName>
        <label>No Of Vehicles Reservation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_Booking_End_Time_Local__c</fullName>
        <label>Booking End Time (Local)</label>
        <type>Time</type>
    </fields>
</CustomObject>